--- a/.github/workflows/build-beerorderservice.yaml
+++ b/.github/workflows/build-beerorderservice.yaml
@@ -1,4 +1,4 @@
-name: build-beerorderservice
+name: build
 
 on:
   push:
@@ -15,3 +15,5 @@ jobs:
           java-version: '11'
           distribution: 'zulu'
       - run: mvn clean package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
