Add mysql integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 logging.level.com.josdugan=debug
 server.port=8081
 
+spring.datasource.initialization=EMBEDDED
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+
 sfg.brewery.beer-service-host=http://localhost:8080
