--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 logging.level.com.josdugan=debug
 server.port=8081
 
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
 spring.datasource.initialization=EMBEDDED
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
