--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.artemis.password=simetraehcapa
 spring.datasource.initialization=EMBEDDED
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
+spring.jackson.serialization.write_dates_as_timestamps=false
+spring.jackson.serialization.write_date_timestamps_as_nanoseconds=true
 spring.jpa.defer-datasource-initialization=true
 
 sfg.brewery.beer-service-host=http://localhost:8080
