Add config client bootstrap

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,5 @@
 sfg.brewery.beer-service-host=http://localhost:8083
 logging.level.com.josdugan=debug
+
+spring.cloud.config.enabled=false
+spring.cloud.discovery.enabled=false
