Add logback and zipkin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.h2.console.enabled=true
 spring.jackson.serialization.write_dates_as_timestamps=false
 spring.jackson.serialization.write_date_timestamps_as_nanoseconds=true
 spring.jpa.defer-datasource-initialization=true
+spring.zipkin.enabled=false
 
 sfg.brewery.beer-service-host=http://localhost:8080
